--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,8 @@
 {
     "name": "MasterMind",
     "short_name" : "MasterMind",
+    "start_url": "index.html?utm_source=homescreen",
+    "scope" : "./",
     "icons": [
         {
             "src": "android-chrome-192x192.png",
